se finalizo el maquetado del reloj

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Reloj JS</title>
 </head>
 <body>
-   <main class="container d-flex justify-content-center align-items-center">
-       <section class="bg-primary w-75">
-            <article class="d-flex justify-content-around flex-wrap">
+   <main class="d-flex justify-content-center align-items-center">
+       <section class="w-75 green">
+            <article class="d-flex justify-content-around flex-wrap fecha">
                 <p>Martes</p>
                 <p>2</p>
                 <p>de</p>
@@ -19,12 +19,17 @@
                 <p>del</p>
                 <p>2021</p>
             </article>
-            <article class="d-flex justify-content-around flex-wrap">
+            <article class="d-flex justify-content-around flex-wrap hora">
                 <p>18</p>
                 <p>:</p>
                 <p>40</p>
                 <p>:</p>
                 <p>38</p>
+            </article>
+            <article class="text-center">
+                <button class="btn btn-green boton"></button>
+                <button class="btn btn-pink boton mx-3"></button>
+                <button class="btn btn-blue boton"></button>
             </article>
        </section>
    </main>
