se agrego la funcionalidad del reloj

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
    <main class="d-flex justify-content-center align-items-center">
        <section class="w-75 green">
             <article class="d-flex justify-content-around flex-wrap fecha">
-                <p>Martes</p>
-                <p>2</p>
+                <p id='diaSemana'></p>
+                <p id='numDia'></p>
                 <p>de</p>
-                <p>febrero</p>
+                <p id='mes'></p>
                 <p>del</p>
-                <p>2021</p>
+                <p id='anio'></p>
             </article>
             <article class="d-flex justify-content-around flex-wrap hora">
-                <p>18</p>
+                <p id='hora'></p>
                 <p>:</p>
-                <p>40</p>
+                <p id='minutos'></p>
                 <p>:</p>
-                <p>38</p>
+                <p id='segundos'></p>
             </article>
             <article class="text-center">
                 <button class="btn btn-green boton"></button>
